# peltipoliisi2

./: .gitignore  ARCHITECTURE.md  README.md  cluster_worker.cpp  cluster_worker.hpp  defs.hpp  eval_errors.npz  event_reader.cpp  event_reader.hpp  main.py  meson.build  peltipoliisi2.cpp  pyproject.toml  rpm_estimator.cpp  rpm_estimator.hpp  run.sh  test.ipynb  vis.py
ml/: evaluate_fred_predictor.py  pyproject.toml  train_fred_predictor.py
ml/fred_trainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: cluster_worker.cpp  defs.hpp  estimate_rpms.cpp  event_reader.cpp  main.cpp  render.cpp  rpm_estimator.cpp  rpm_from_fft.cpp  trajectory_predictor.cpp
